fix(desktop): alignement of photo

--- a/collective/rcse/resources/dev/less/desktop.less
+++ b/collective/rcse/resources/dev/less/desktop.less
@@ -24,7 +24,10 @@ body { padding-top: 54px!important; }
     .group, .date{display:block;}
 }
 .picturefill-wrapper img,
-.rcsetile .panel-body img{max-width: 100%}
+.rcsetile{
+	.panel-body img{max-width: 100%}
+	.media-body{padding-left: 150px;}
+}
 .rcse_tile_wrapper{min-height: 200px;}
 
 /* transcode.* */
